Mon Sep 12 12:53:39 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rake/file_list.rb (Rake::FileList#egrep): there is no need to
	  open files in binary mode.
	  see more details in https://github.com/jimweirich/rake/issues/74

Mon Sep 12 12:42:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_exception.rb (TestException#test_exit_success_p):
	  assert also the cases when exiting with true and false.

	* lib/test/unit/assertions.rb (assert_send): make arguments in
	  the default message clearer.

Sun Sep 11 05:23:14 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Deal with subclasses of Matrix [redmine #5307]

Sat Sep 10 13:38:20 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* dir.c (dir_s_aref):
	* dir.c (dir_entries): Two small documentation fixes.
	  A patch from Aaron Lerch. [Bug #5302] [ruby-core:39404]

Sat Sep 10 08:30:03 2011  Koichi Sasada  <ko1@atdot.net>

	* gc.c (GC_PROFILE_MORE_DETAIL, CALC_EXACT_MALLOC_SIZE):
	  define macros only if they are not defined.
	  fixes: [Ruby 1.9 - Feature #5291]

Sat Sep 10 08:25:47 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (bv_decls): parse.y relies on $$ = $1 before action
	  routines.  a patch from Michael Edgar.  [Bug #5303]
	  [ruby-core:39429]

Sat Sep 10 01:37:55 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* sample/drb/dhasenc.rb: coding cookie of Emacs is coding,
	  not encoding.

	* sample/mine.rb: ditto.

Fri Sep  9 21:56:40 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_sqrt): Fix comment.
	  BigDecimal#sqrt requires argument. Reported by Makoto Kishimoto.
	  Thanks for your contribution. [Bug #5267] [ruby-dev:44452]

Fri Sep  9 11:00:55 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/rubygems/test_gem_commands_help_command.rb: Add one
	  `require` because if run test-all with test/unit parallel
	  running, sometimes this test fails by some constants not found.