@@ -489,11 +489,19 @@ IDとは変数名，メソッド名を表す整数です．Rubyの中では
 でアクセスできます．Cからこの整数を得るためには関数
 
   rb_intern(const char *name)
+  rb_intern_str(VALUE name)
 
 を使います．Rubyから引数として与えられたシンボル(または文字
 列)をIDに変換するには以下の関数を使います．
 
   rb_to_id(VALUE symbol)
+  rb_check_id(volatile VALUE *name)
+
+もし引数がシンボルでも文字列でもなければ、to_strメソッドで文
+字列に変換しようとします．後者の関数はその変換結果を*nameに保
+存し,その名前が既知のシンボルでない場合は0を返します．この関
+数が0以外を返した場合は*nameは常にシンボルか文字列であり、0を
+返した場合は常に文字列です．
 
 2.2.3 CからRubyのメソッドを呼び出す
 
